application/istio/sampleapp-vs-100-0-0.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sampleapp-virtual-service
  namespace: sampleapp
spec:
  hosts:
    - sampleapp
  http:
    - route:
        - destination:
            host: sampleapp
            subset: prod
          weight: 100
        - destination:
            host: sampleapp
            subset: baseline
          weight: 0
        - destination:
            host: sampleapp
            subset: canary
          weight: 0
