application/istio/sampleapp-vs-20-40-40.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sampleapp-virtual-service
  namespace: sampleapp
spec:
  hosts:
    - sampleapp
  http:
    - route:
        - destination:
            host: sampleapp
            subset: prod
          weight: 20
        - destination:
            host: sampleapp
            subset: baseline
          weight: 40
        - destination:
            host: sampleapp
            subset: canary
          weight: 40
