application/istio/sampleapp-vs-80-10-10.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sampleapp-virtual-service
  namespace: sampleapp
spec:
  hosts:
    - sampleapp
  http:
    - route:
        - destination:
            host: sampleapp
            subset: prod
          weight: 80
        - destination:
            host: sampleapp
            subset: baseline
          weight: 10
        - destination:
            host: sampleapp
            subset: canary
          weight: 10
